Salesforce/main/default/main/default/objects/Quote/fields/Condi_o_de_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Condi_o_de_pagamento__c</fullName>
    <label>Condição de pagamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>