Salesforce/main/default/main/default/objects/Quote/fields/Desconto_percentual__c.field-meta.xml
<CustomField>
    <fullName>Desconto_percentual__c</fullName>
    <formula>Desconto_ao_preco_base__c / Preco_unitario_base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto percentual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>