Salesforce/main/default/main/default/objects/Quote/fields/Dias_de_quinta_prorroga_o_pedido__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_quinta_prorroga_o_pedido__c</fullName>
    <formula>IF(ISBLANK(Novo_quinto_vencimento__c), 0, Novo_quinto_vencimento__c - DATEVALUE(Opportunity.CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de quinta prorrogação pedido</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>