Salesforce/main/default/main/default/objects/Quote/fields/Dias_de_quinta_prorrogaco__c.field-meta.xml
<CustomField>
    <fullName>Dias_de_quinta_prorrogaco__c</fullName>
    <formula>IF(ISBLANK(Quinto_vencimento__c), 0, Quinto_vencimento__c - DATEVALUE(Opportunity.CreatedDate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dias de quinta prorrogação</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>