Salesforce/main/default/main/default/objects/Quote/fields/Juros_Desconto__c.field-meta.xml
<CustomField>
    <fullName>Juros_Desconto__c</fullName>
    <label>Juros/Desconto %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>