Salesforce/main/default/main/default/objects/Quote/fields/Prazos_sugeridos__c.field-meta.xml
<CustomField>
    <fullName>Prazos_sugeridos__c</fullName>
    <formula>IF(AND(NOT(ISNULL(Campanha__r.Kg_para_5_parcelas_no_m_ximo__c)), Kg_de_produto__c &gt;= Campanha__r.Kg_para_5_parcelas_no_m_ximo__c), 5,
IF(AND(NOT(ISNULL(Campanha__r.Kg_para_4_parcelas_no_m_ximo__c)), Kg_de_produto__c &gt;= Campanha__r.Kg_para_4_parcelas_no_m_ximo__c), 4,
IF(AND(NOT(ISNULL(Campanha__r.Kg_para_3_parcelas_no_m_ximo__c)), Kg_de_produto__c &gt;= Campanha__r.Kg_para_3_parcelas_no_m_ximo__c), 3,
IF(AND(NOT(ISNULL(Campanha__r.Kg_para_2_parcelas_no_m_ximo__c)), Kg_de_produto__c &gt;= Campanha__r.Kg_para_2_parcelas_no_m_ximo__c), 2,
1))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prazos sugeridos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>