Salesforce/main/default/main/default/objects/Quote/fields/Preco_Total_Sugerido_Com_Juros__c.field-meta.xml
<CustomField>
    <fullName>Preco_Total_Sugerido_Com_Juros__c</fullName>
    <formula>Preco_Total_Sugerido_Sem_Juros__c + Total_Juros_Desconto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço Total Sugerido Com Juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>