Salesforce/main/default/main/default/objects/Quote/fields/Preco_unitario_final__c.field-meta.xml
<CustomField>
    <fullName>Preco_unitario_final__c</fullName>
    <formula>Preco_unitario_base__c - Desconto_ao_preco_base__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço unitário final</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>