Salesforce/main/default/main/default/objects/Quote/fields/Preco_unitario_quinto_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Preco_unitario_quinto_vencimento__c</fullName>
    <formula>Preco_unitario_final__c + Valor_quinto_juro__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preço unitário - quinto vencimento</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>