Salesforce/main/default/main/default/objects/Quote/fields/Preco_Unitario_Sugerido_Difusao__c.field-meta.xml
<CustomField>
    <fullName>Preco_Unitario_Sugerido_Difusao__c</fullName>
    <label>Preço Unitário Sugerido Difusão</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>