Salesforce/main/default/main/default/objects/Quote/fields/Primeiro_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Primeiro_vencimento__c</fullName>
    <formula>Opportunity.Campaign.Primeiro_vencimento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primeiro vencimento</label>
    <type>Date</type>
</CustomField>