Salesforce/main/default/main/default/objects/Quote/fields/Quantidade_total_do_produto__c.field-meta.xml
<CustomField>
    <fullName>Quantidade_total_do_produto__c</fullName>
    <label>Quantidade total do produto</label>
    <summarizedField>QuoteLineItem.Quantity</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>