Salesforce/main/default/main/default/objects/Quote/fields/Quarto_juros__c.field-meta.xml
<CustomField>
    <fullName>Quarto_juros__c</fullName>
    <formula>( Dias_de_quarta_prorrogaco__c * Opportunity.Campaign.Juros__c) / Opportunity.Campaign.Juros_para_cada_dias__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarto % juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>