Salesforce/main/default/main/default/objects/Quote/fields/Quinto_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Quinto_pagamento__c</fullName>
    <label>Quantidade quinto pagamento</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>