Salesforce/main/default/main/default/objects/Quote/fields/Quinto_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Quinto_vencimento__c</fullName>
    <formula>Opportunity.Campaign.Quinto_vencimento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quinto vencimento</label>
    <type>Date</type>
</CustomField>