Salesforce/main/default/main/default/objects/Quote/fields/Taxa_de_primeiro_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Taxa_de_primeiro_pagamento__c</fullName>
    <label>Taxa de primeiro pagamento</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>