Salesforce/main/default/main/default/objects/Quote/fields/Terceiro_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Terceiro_pagamento__c</fullName>
    <label>Quantidade terceiro pagamento</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>