Salesforce/main/default/main/default/objects/Quote/fields/Terceiro_vencimento__c.field-meta.xml
<CustomField>
    <fullName>Terceiro_vencimento__c</fullName>
    <formula>Opportunity.Campaign.Terceiro_vencimiento__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terceiro vencimento</label>
    <type>Date</type>
</CustomField>