Salesforce/main/default/main/default/objects/Quote/fields/Total_com_juros__c.field-meta.xml
<CustomField>
    <fullName>Total_com_juros__c</fullName>
    <formula>Valor_total_dos_juros__c + ( Quantidade_total_do_produto__c * Preco_unitario_final__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total com juros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>