Salesforce/main/default/main/default/objects/Quote/fields/Total_do_quarto_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Total_do_quarto_pagamento__c</fullName>
    <label>Total do quarto pagamento</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>