Salesforce/main/default/main/default/objects/Quote/fields/Total_do_quinto_pagamento__c.field-meta.xml
<CustomField>
    <fullName>Total_do_quinto_pagamento__c</fullName>
    <label>Total do quinto pagamento</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>