Salesforce/main/default/main/default/objects/Quote/fields/Valor_quinto_juro__c.field-meta.xml
<CustomField>
    <fullName>Valor_quinto_juro__c</fullName>
    <formula>Preco_unitario_final__c * Quinto_juros__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor quinto juro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>