Salesforce/main/default/main/default/objects/Quote/fields/Valor_terceiro_juro__c.field-meta.xml
<CustomField>
    <fullName>Valor_terceiro_juro__c</fullName>
    <formula>Preco_unitario_final__c * Terceiro_juros__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor terceiro juro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>